@startuml

skinparam classAttributeIconSize 0

abstract class Combatant {
  - name : String
  - maxHp : int
  - currentHp : int
  - attack : int
  - defense : int
  - speed : int
  - items : List<Item>
  - statusEffects : List<StatusEffect>

  + Combatant(name : String, maxHp : int, attack : int, defense : int, speed : int)
  + getAvailableActions() : List<Action>
  + takeDamage(amount : int) : void
  + heal(amount : int) : void
  + isAlive() : boolean
  + addStatusEffect(effect : StatusEffect) : void
  + removeExpiredEffects() : void
}

abstract class Player {
  + Player(...)
}

abstract class Enemy {
  + Enemy(...)
}

class Warrior {
  + Warrior(...)
  + getAvailableActions() : List<Action>
}

class Wizard {
  + Wizard(...)
  + getAvailableActions() : List<Action>
}

class Goblin {
  + Goblin(...)
  + getAvailableActions() : List<Action>
}

class Wolf {
  + Wolf(...)
  + getAvailableActions() : List<Action>
}

Player --|> Combatant
Enemy --|> Combatant

Warrior --|> Player
Wizard --|> Player

Goblin --|> Enemy
Wolf --|> Enemy

@enduml
